--- a/style.css
+++ b/style.css
@@ -3839,6 +3839,15 @@ a:focus {
   font-size: 0.71111em;
 }
 
+.entry .entry-content .wp-block-group {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.entry .entry-content .wp-block-group.alignfull > *, .entry .entry-content .wp-block-group.alignwide > * {
+  max-width: 780px;
+}
+
 .entry .entry-content .wp-block-newspack-blocks-homepage-articles .article-meta {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 }
